[package]
name = "sazzer-actix-response"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
serde_json = "1.0.64"
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
tracing = "0.1.26"

[dev-dependencies]
assert2 = "0.3.5"
